# ai-team-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: openhands-windows-docker.md
roles/: architect.md  engineer.md  product-manager.md  project-analyst.md  qa-engineer.md  reviewer.md
src/ai_team/: cli.py
src/ai_team/core/: autonomous_backlog.py  bounded_delivery.py  bounded_supervisor.py  ci_monitor.py  cloud_resilience.py  delivery.py  evidence.py  external_qa.py  fallback_policy.py  git_policy.py  github_executor.py  github_gate.py  isolated_executor.py  orchestrator.py  project_loader.py  receipts.py  routing_config.py  staging_operations.py  status_zh.py  supervisor.py  telegram_notify.py  trusted_dev.py  watchdog.py  watchdog_ai_repair.py  watchdog_repair.py
src/ai_team/providers/: __init__.py  antigravity.py  base.py  cli_common.py  codex.py  openhands.py  (+3 more)
templates/project-profile/: project.yaml
tests/: test_autonomous_backlog.py  test_bounded_delivery.py  test_bounded_supervisor.py  test_ci_monitor.py  test_cli_providers.py  test_cloud_resilience.py  test_delivery.py  test_evidence.py  test_external_qa.py  test_git_policy.py  test_isolated_executor.py  test_project_loader.py  test_provider.py  test_role_routing.py  test_router_provider.py  test_staging_operations.py  test_status_zh.py  test_supervisor.py  test_telegram_notify.py  test_trusted_dev.py  test_watchdog.py  test_watchdog_ai_repair.py  test_workflow.py
workflows/: bug-fix-loop.yaml  project-analysis.yaml  provider-smoke.yaml
