[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-team-orchestrator"
version = "0.1.0"
description = "Reusable AI software team orchestrator"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "pydantic>=2.10",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.12.0",
]

[project.scripts]
ai-team = "ai_team.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
